[package]
name = "tiny-os"
version = "0.1.0"
edition = "2018"
authors = ["Cedric Chee <cedric+gh@invictusbyte.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"] # we need this feature since we don’t link the standard library.