[package]
name = "tiny-os"
version = "0.1.0"
edition = "2018"
authors = ["Cedric Chee <cedric+gh@invictusbyte.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"] # we need this feature since we don’t link the standard library.

# Enable QEMU special `isa-debug-exit` device, which provides an easy way to
# exit QEMU from the guest system.
# 
# The `bootimage runner` appends the test-args to the default QEMU command for
# all test executables. For a normal `cargo run`, the arguments are ignored.
# 
# Together with the device name (`isa-debug-exit`), we pass the two parameters
# `iobase` and `iosize` that specify the I/O port through which the device can
# be reached from our kernel.
[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33 # maps a specified exit code to the exit code `0`.  (0x10 << 1) | 1
test-timeout = 30 # (in seconds)

[[test]]
name = "should_panic"
harness = false